fix: rename resolutionDegrees to resolutionDegree
